tests/snapshots/render_snapshots__code_120.snap
---
source: tests/render_snapshots.rs
expression: "render_to_text(source, width, & theme :: DARK)"
---
Code
────

╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ fn main() {                                                                                                          │
│     let greeting = "hello";                                                                                          │
│     println!("{greeting}");                                                                                          │
│ }                                                                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ no language here                                                                                                     │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ an indented block                                                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯

A line with inline code in it.
