tests/snapshots/render_snapshots__prose_80.snap
---
source: tests/render_snapshots.rs
expression: "render_to_text(source, width, & theme :: DARK)"
---
Reading Markdown
────────────────

A paragraph with emphasis, strong text, a retraction, some inline code, and a
relative link.

│ A quotation that runs long enough to wrap at narrow measures, so the bar
│ prefix is exercised on more than one line.
│
│ A second paragraph inside the same quote.

────────────────────────────────────────────────────────────────────────────────

Section Two

Another paragraph. A very long unbroken token follows to exercise the hard-split
path: https://example.com/an/extremely/long/path/that/will/not/fit
