tests/snapshots/render_snapshots__tables_60.snap
---
source: tests/render_snapshots.rs
expression: "render_to_text(source, width, & theme :: DARK)"
---
Tables
──────

┌─────────────┬────────┬────────────────────────────┐
│ Option      │  Type  │                Description │
├─────────────┼────────┼────────────────────────────┤
│ theme       │ string │        Colour theme to use │
│ max_measure │ number │ Widest the text may become │
└─────────────┴────────┴────────────────────────────┘

┌───┐
│ a │
├───┤
└───┘
